home page updates

--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
         </div>
 
         <div class="SSS-project">
-            <div class="project__pic-container">
-                <img src="./assets/SSS_thumbnail.png" 
+                <img src="./assets/sss_thumbnail.png" 
                 alt="Subscription Super Simplified">
-            </div>
             <div class="project__text-container">
                 <p class="project__text__p">CASE STUDY - UX/UI DESIGN</p>
                 <h1 class="project__header">Subscriptions Super Simplified</h1>
@@ -92,29 +90,26 @@
         </div>
          
         <div class = "CFA-project" >
-            <div class = "project__pic-container">
-                <img src="./assets/chickfila.png" 
-                alt="Chick Fil A">
-            </div>
             <div class="project__text-container">
                 <p class="project__text__p">CASE STUDY - UX/UI DESIGN</p>
-                <h1 class="project__header">Chick-Fil-A Kiosk UI </h1>
-                <p class="project__text__p"> Creation of a Chick Fil A kiosk</p>
+                <h1 class="project__header">Chick-Fil-A Restaurant Kiosk UI </h1>
+                <p class="project__text__p"> Designing the UI of a Chick-Fil-A Restaurant Kiosk</p>
                 <button class="CFA-button">READ MORE</button> 
             </div>
+            <img src="./assets/chickfila.png" 
+            alt="Chick Fil A">
         </div>
-
-        <div class = "allprojects-container">
-            <button class = "allprojects"   
-                    onclick="window.open('./assets/Shirley Chen Resume.pdf')">
+        <div class = "nav-projects">
+            <h2 class = "like-it"> Like what you see so far? </h2>
+            <button class="allprojects" onclick="location.href='projects.html';">
                 View All Projects
             </button>
+        </div>
     </section>
 
-    <section id="experience"> 
-
+    <section>
+        
     </section>
-
     <!-- FOOTER -->
     <footer class = "footer">
         <div class = "footer-text">
