--- a/aboutme.html
+++ b/aboutme.html
@@ -40,4 +40,35 @@
             <li><a href="#resume" onclick="toggleMenu()">Resume</a></li>
         </div>
     </nav>
+
+    <div class = "about">
+        <div class = "about-info"> 
+            <p> HELLO!</p>
+            <h1> I'm Shirley Chen. </h1>
+            <p> ♡ I’m currently a third year undergraduate student at the University 
+                of Toronto’s iSchool pursuing a Bachelor of Information. </p>
+            <p> ♡ Previously, I was in a Computational Cognitive Science Major with a Statistics and 
+                Psychology double minor, in which I developed a deeper understanding 
+                in a diverse blend of programming, psychological, and statistical
+                concepts and skills. </p>
+             <p> ♡ I am passionate about creating solutions to help others and 
+                learning about how I can do so while navigating the complexities 
+                that arise in the rapidly evolving landscape of technology and
+                 information. Engaging in both the UX and data science fields
+                  allow me to put my creative and analytical skills to use.</p>
+             <p> ♡ In my free time, you will probably find me bullet journalling, 
+                listening to and discovering new music from all genres, or 
+                immersing myself in fashion trends through Pinterest or in 
+                local thrift stores! </p>
+        </div>
+        <img src="./assets/pfp.jpeg" 
+                alt="Profile Picture">
+    </div>
+    
  </body>
+ <!-- FOOTER -->
+ <footer class = "footer">
+    <div class = "footer-text">
+        <p> <i>Thanks for visiting, come back soon !! *:･ﾟ✧*:･ﾟ✧ </i>  Shirley ©hen 2024</p>
+    </div>
+</footer>
