--- a/index.html
+++ b/index.html
@@ -107,16 +107,18 @@
         </div>
     </section>
 
-    <section>
-        
+    <section id = "space">
+
     </section>
-    <!-- FOOTER -->
-    <footer class = "footer">
-        <div class = "footer-text">
-            <p> <i>Thanks for visiting, come back soon !! *:･ﾟ✧*:･ﾟ✧ </i>  Shirley ©hen 2024</p>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
+
+<!-- FOOTER -->
+<footer class = "footer">
+    <div class = "footer-text">
+        <p> <i>Thanks for visiting, come back soon !! *:･ﾟ✧*:･ﾟ✧ </i>  Shirley ©hen 2024</p>
+    </div>
+</footer>
+
 </html>
