--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shirley's Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
@@ -65,6 +66,21 @@
                 alt="Profile Picture">
     </div>
     
+    <div class = "skills">
+        <h1> Here are some of the technologies I've worked with: </h1>
+        <img src="./assets/skill_logos/figma logo.png" 
+            alt="Figma Logo">
+        <img src="./assets/skill_logos/python logo.png" 
+            alt="Python Logo">
+        <img src="./assets/skill_logos/sql logo.png" 
+            alt="SQL Logo">
+        <img src="./assets/skill_logos/javascript logo.png" 
+            alt="Javascript Logo">
+        <img src="./assets/skill_logos/html logo.png" 
+            alt="HTML Logo">
+        <img src="./assets/skill_logos/css logo.png" 
+            alt="CSS Logo">
+    </div>
  </body>
  <!-- FOOTER -->
  <footer class = "footer">
