--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a href="#resume" onclick="toggleMenu()">Resume</a></li>
         </div>
     </nav>
+
     <section id="profile"> 
         <div class = "section__text">
             <h1 class = "title"> Hi there, my name is Shirley!</h1>
@@ -85,7 +86,10 @@
                 <h1 class="project__header">Subscriptions Super Simplified</h1>
                 <p class="project__text__p">A subscriptions service manager app to
                      assist with preventable issues that commonly emerge.</p>
-                <button class="SSS-button">READ MORE</button> 
+                
+                     <a href="./projects/subscriptions-super-simplified.html">
+                        <button class="SSS-button">READ MORE</button> 
+                     </a> 
             </div>
         </div>
          
@@ -94,7 +98,9 @@
                 <p class="project__text__p">CASE STUDY - UX/UI DESIGN</p>
                 <h1 class="project__header">Chick-Fil-A Restaurant Kiosk UI </h1>
                 <p class="project__text__p"> Designing the UI of a Chick-Fil-A Restaurant Kiosk</p>
+                <a href="./projects/subscriptions-super-simplified.html">
                 <button class="CFA-button">READ MORE</button> 
+                </a>
             </div>
             <img src="./assets/chickfila.png" 
             alt="Chick Fil A">
