--- a/projects/subscriptions-super-simplified.html
+++ b/projects/subscriptions-super-simplified.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shirley's Website</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="experiences.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     
     <nav id = "desktop-nav">
         <div class="logo">
-            <a href="index.html"> 
-                <img src="./assets/logo.png" alt="Shirley Chen Logo" style="width: 100px; height: auto;">
+            <a href="../index.html"> 
+                <img src="../assets/logo.png" alt="Shirley Chen Logo" style="width: 100px; height: auto;">
             </a>
         </div>
         <div>
             <ul class = "nav-links">
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="experiences.html">Experiences</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
+                <li><a href="../projects.html">Projects</a></li>
+                <li><a href="../experiences.html">Experiences</a></li>
+                <li><a href="../aboutme.html">About Me</a></li>
                 <li><a href="./assets/Shirley Chen Resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>
@@ -41,3 +40,5 @@
             <li><a href="#resume" onclick="toggleMenu()">Resume</a></li>
         </div>
     </nav>
+    
+</body>
