--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shirley's Website</title>
+    <link href="https://api.fontshare.com/css?f[]=satoshi@500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -97,7 +98,7 @@
             <div class="project__text-container">
                 <p class="project__text__p">CASE STUDY - UX/UI DESIGN</p>
                 <h1 class="project__header">Chick-Fil-A Restaurant Kiosk UI </h1>
-                <p class="project__text__p"> Designing the UI of a Chick-Fil-A Restaurant Kiosk</p>
+                <p class="project__text__p"> Designing the various pages involved in the UI of a Chick-Fil-A Restaurant Kiosk</p>
                 <a href="./projects/subscriptions-super-simplified.html">
                 <button class="CFA-button">READ MORE</button> 
                 </a>
