adding recent changes with lj

--- a/projects/subscriptions-super-simplified.html
+++ b/projects/subscriptions-super-simplified.html
@@ -77,7 +77,7 @@
 
     </div>
 
-    <div class = "process">
+    <div class = "overview-research">
         <h3 class = "section_header"> 1. Overview </h3>
         <p> Have you ever had issues managing a subscription, forgotten about a free trial that you signed 
             for, or gone through a tedious process attempting to cancel a service? Subscription services
@@ -107,21 +107,48 @@
             expired was able to record their response. Our target demographic was subscription users, thus
             for the intersiews, we had two main requirements for the interviewees: they must have at least 
             one subscription and pay for it, and they must have cancelled or tried to cancel at least one service 
-            in the past year. These interviews were conducted in person or over the phone. From our research, we were able to compile various struggles users had with their subscriptions and then 
+            in the past year. These interviews were conducted in person or over the phone. From our research,
+             we were able to compile various struggles users had with their subscriptions and then 
             pinpoint the similarities. </p>
             
             <p class = "exclamation"> <strong>75% of the Google forms participants </strong> had at least
                 forgotten to cancel their subscription once and <strong>73% </strong>relied on their 
                 memory to track their subscriptions.</p>
-        
+        <p> Using Miro, we created an affinity map where organized all of our interview data into sections to identify key themes.</p>
+        <img src="../projects/SSS pics/affinitymap.png" alt="Affinity Map">
+        <p>Along with the issue of forgetting to cancel their subscriptions after a free 
+            trial due to lack of tracking methods, the interviewees expressed that 
+            there is often a complicated and frustrating cancellation process involved 
+            with subscription services. After all our research was gathered and examined,
+             we were ready to move onto the ideation process of the project.</p>
+    </div>
 
+    <div class = "ideation">
         <h3 class = "section_header">  3. Ideation </h3>
+        <div class = "persona">
+        <img src="../projects/SSS pics/selenapic.png" alt="Selena The Subscriber"> </img>
+        <p>  An essential part in our project was the ideation process, in which my group and I were able
+             to practice collaboration and exercise our creative thinking. </p>
 
+        <p> Part 1 of the ideation process included producing a persona, an empathy map,
+             As-Is scenario, and need statements. Firstly, we generated a persona using 
+             data from our research and designed a potential scenario that would benefit 
+             from using our app. Our persona was Selena the Subscriber, a busy university 
+             student with lots of subscriptions. </p>
+
+         </div>
+
+        <p> To gain a deeper understanding of Selena’s <strong>thoughts, motivations, and feelings</strong>,
+            we curated an empathy map. Actual quotes and expressed feelings were derived
+             from our research data. Using the empathy map, we created an As-Is scenario 
+             to walk through a potential real world scenario that Selena would experience 
+             when facing an issue with a subscription. The mapped out As-Is scenario 
+             clearly communicated the main pain points that Selena had.</p>
+        <img src="../projects/SSS pics/SSS empathy map.png" alt="Empathy Map"> </img>
 
         <h3 class = "section_header">  4. Prototypes Design and Evaluation </h3>
 
         <h3 class = "section_header">  5. Moving Forward </h3>
-
 
     </div>
 
